# mcp-imagemagick

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  SUMMARY.md  test_mcp.py
docs/: api.md  development.md  known-issues.md  usage.md
kb/: darktable-cli.md  imagemagick-cli.md  mcp-protocol.md  mcp-rust-impl.md
src/: lib.rs  main.rs  server.rs  transport.rs
src/converters/: darktable.rs  imagemagick.rs  mod.rs
src/handlers/: image.rs  mod.rs
